--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -156,8 +156,17 @@ footer {
   transform: scale(1.1);
 }
 
-@media (max-width: 700px) {
-    main {
+@media (max-width: 767px) {
+
+ .fullscreen-bg {
+    background: url('../images/aurora.png') center center / cover no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
+
+main {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
