--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
-	font-family: 'Share Tech', sans-serif;
+	/*font-family: 'Share Tech', sans-serif;*/
+	font-family: 'Titillium Web', sans-serif;
 	color: white;
 	display: flex;
 	flex-direction: column;
@@ -156,7 +157,7 @@ footer {
   transform: scale(1.1);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 700px) {
 
  .fullscreen-bg {
     background: url('../images/aurora.png') center center / cover no-repeat;
