--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body{
 	display: flex;
 	flex-direction: column;
 	align-content: center;
-	justify-content: flex-start;
 	min-height: 100vh;
 	margin:0px auto;
 }
@@ -17,7 +16,7 @@ header {
 	align-items: center;
 	justify-content: space-around;
 	background-color: rgba(10,10,10, 0.2);
-	height: 100%;
+	height: 100px;
 	width: 100%;
 		
 }
@@ -28,6 +27,11 @@ main {
 	justify-content: center;
 	align-items: center;
 	flex: 1;
+	margin: 50px 0 0 0;
+}
+
+#myname {
+	margin: 0 0 0 60px;
 }
 
 #row1 {
@@ -95,6 +99,19 @@ footer {
   }
 }
 
+#headshot{
+	background: url("../images/headshot.jpg");
+	background-size: cover;
+	background-position: center;
+	z-index: 1;
+	margin: 110px  0 0 0;
+	opacity: 0.9;
+	filter: blur(0px) brightness(1);
+	width: 180px;
+	height: 180px;
+	/*align-self: center;*/
+}
+
 #aboutme{
 	background: url("../images/san-francisco.jpg");
 	background-size: cover;
@@ -119,24 +136,11 @@ footer {
 	background-position: center;
 }
 
-#lorem{
-	background: url("../images/sonoma.jpg");
-	background-size: cover;
-	background-position: center;
-}
-
-
-#lorem2{
-	background: url("../images/san-francisco-2.jpg");
-	background-size: cover;
-	background-position: center;
-}
-
 .pagename {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 30px;
+	margin: 30px 50px;
 	width: 200px;
 	height: 200px;
 	border-radius: 100px;
@@ -147,7 +151,7 @@ footer {
 
 .pagename:hover {
 	filter: blur(0px) brightness(1);
-	 opacity: 1.0;
+	opacity: 1.0;
 }
 
 /*transform effects*/
@@ -167,22 +171,8 @@ footer {
     display: none;
   }
 
-main {
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	flex: 1;
-}
-
-#row1 {
-	flex-direction: column;
-}
-
-#row2 {
-	flex-direction: column;
-}
-
 .pagename {
-		filter: blur(0px) brightness(1);
-		 opacity: 1.0;
+	filter: blur(0px) brightness(1);
+	opacity: 1.0;
+	margin: 30px;
     }
