--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	/*font-family: 'Share Tech', sans-serif;*/
+	/* earlier code ... font-family: 'Share Tech', sans-serif;*/
 	font-family: 'Titillium Web', sans-serif;
 	color: white;
 	display: flex;
