changing file name for headshot jpg

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ footer {
 }
 
 #headshot{
-	background: url("../images/headshot.jpg");
+	background: url("../images/headshot.JPG");
 	background-size: cover;
 	background-position: center;
 	z-index: 1;
